# AzureSphereSamples

./: .gitignore  .gitmodules  LICENSE  README.MD  README._MD  README.md
.github/workflows/: codeql-analysis.yml
AvnetSK2/: AvnetSK2.code-workspace  CMakeLists.txt  CMakeSettings.json  README.MD  app_manifest.json  applibs_versions.h  azure_iot.h  azure_iot_dps.c  azure_iot_utilities.c  epoll_timerfd_utilities.c  epoll_timerfd_utilities.h  main.c  parson.c  rgbled_utility.h
AvnetSK2/IoT-Pnp-dtdl-v2/: README.MD
AvnetSK2/LSM6DSO/: CMakeLists.txt  LSM6DSO.c  lsm6dso_reg.c
AvnetSK2/models/: AVNETSK-1.json  Azure Sphere Starter Kit.json  lps22hh-1.json  lsm6dso-1.json
AvnetSK2/sensors/: CMakeLists.txt  lps22hh.c  lps22hh_internal.h  lsm6dso.c  lsm6dso_internal.h  sensors.c
AvnetSK2/sensors/Inc/: lsm6dso.h  sensors.h
Hardware/avnet_mt3620_sk2/: avnet_mt3620_sk2.json
MCUtoMT3620toAzure/: Azure_iot_utilities-snippets.txt  MCUtoMT3620toAzure.sln  README.MD
MCUtoMT3620toAzure/MCUSerialSketch/: MCUSerialSketch.ino  MCUSerialSketch.vcxproj  MCUSerialSketch.vcxproj.filters
MCUtoMT3620toAzure/MCUSerialSketch/__vm/: .MCUSerialSketch.vsarduino.h  Configuration.Debug.vmps.xml  Upload.vmps.xml
MCUtoMT3620toAzure/MCUtoMT3620toAzure/: CMakeLists.txt  CMakeSettings.json  MCU_utilities.c  MCU_utilities.h  MCUtoMT3620toAzure.vcxproj  MCUtoMT3620toAzure.vcxproj.filters  UART_utilities.c  UART_utilities.h  app_manifest.json  azure_iot_utilities.c  azure_iot_utilities.h  epoll_timerfd_utilities.c  epoll_timerfd_utilities.h  main.c
Mt3620AzureIoTHub/: CMakeLists.txt  CMakeSettings.json  Mt3620AzureIoTHub.sln  README.MD  app_manifest.json  azure_iot_utilities.c  azure_iot_utilities.h  launch.vs.json  main.c  rgbled_utility.c  rgbled_utility.h
Mt3620AzureIoTHub/Mt3620AzureIoTHub/: Mt3620AzureIoTHub.vcxproj  Mt3620AzureIoTHub.vcxproj.filters  app_manifest.json  azure_iot_utilities.c  main.c
Mt3620DirectDHT/: CMakeLists.txt  CMakeSettings.json  Mt3620DirectDHT.sln  README.MD  README_.MD  ReadMe.MD  app_manifest.json  azure_iot_utilities-snippets.txt  azure_iot_utilities.c  azure_iot_utilities.h  epoll_timerfd_utilities.c  epoll_timerfd_utilities.h  main.c  parson.c  rgbled_utility.c
Mt3620DirectDHT/DHT11/: CMakeLists.txt  DHT11.c  DHT11.h
Mt3620DirectDHT/DHTlib/: CMakeLists.txt  DHTlib.c  DHTlib.vcxproj  DHTlib.vcxproj.filters
Mt3620DirectDHT/Mt3620DirectDHT/: Mt3620DirectDHT.vcxproj  Mt3620DirectDHT.vcxproj.filters  app_manifest.json  assembly.s  azure_iot_utilities.c  epoll_timerfd_utilities.c  epoll_timerfd_utilities.h  led_blink_utility.c  led_blink_utility.h  main.c  rgbled_utility.c  rgbled_utility.h
OTA/: CMakeLists.txt  CMakeSettings.json  MultiCoreApp.code-workspace  README.MD  RedSphereRT.imgpackage  launch.vs.json
OTA/AS3Scripts/: OTA.ps1  OTA.psm1  OTA_CLIv2.psm1  PsCoreWinTerm.ps1  README.MD  SCRIPTED.MD  dumpster.txt
OTA/BlueSphereRT/: CMakeLists.txt  README.MD  app_manifest.json  launch.vs.json  main.c
OTA/GreenSphereRT/: CMakeLists.txt  README.MD  app_manifest.json  launch.vs.json  main.c
OTA/IoTConnectHL/: CMakeLists.txt  CMakeSettings.json  IoTConnectHL.sln  IoTConnectHL.vcxproj  IoTConnectHL.vcxproj.filters  README.MD  app_manifest.json  azure_iot_utilities.c  azure_iot_utilities.h  epoll_timerfd_utilities.h  intercore_utilities.c  intercore_utilities.h  launch.vs.json  main.c  mt3620_rdb.h
OTA/RedSphereRT/: CMakeLists.txt  README.MD  README.md  app_manifest.json  guid_utilities.c  guid_utilities.h  launch.vs.json  main.c  mt3620-baremetal.h  mt3620-intercore.h
OTA/Shared.All/: CMakeLists.txt  guid_utilities.c  guid_utilities.h  intercore_messages.c  intercore_messages.h
OTA/Shared.RT/: CMakeLists.txt  README.MD  guid_utilities.c  mt3620-intercore.c  mt3620-intercore.h
SphereBME280/: Azure Sphere with BME280 Lab.json  CMakeLists.txt  CMakeSettings.json  DeviceHealth-Interface.json  Publish-ImagePackage.ps1  README.MD  README._MD  Readme.md  SphereBME280.code-workspace  SphereBME280.sln  app_manifest.json  azure_iot.c  azure_iot.h  azure_iot_central.c  azure_iot_central.h  azure_iot_dps.c  azure_iot_dps.h  azure_iot_json.c  azure_iot_json.h  azure_iot_pnp.c  azure_iot_pnp.h  azure_iot_utilities.c  azure_iot_utilities.h  epoll_timerfd_utilities.h  main.c  rgbled_utility.c
SphereBME280/BME280/: CMakeLists.txt  bme280.c  bme280.h  bme280_defs.h  libBME280.c
SphereBME280/BME280/Inc/: libBME280.h
SphereBME280/BMP280/: CMakeLists.txt  bmp280.c  libBMP280.c
SphereBME280/BMP280/Inc/: libBMP280.h
SphereBME280/IoT-PnP.dtdl-v1/: Azure Sphere with BME280 Lab.json  README.MD
SphereBME280/IoT-Pnp.dtdl-v2/: README.MD
SphereBME280/SphereBME280/: SphereBME280.vcxproj  SphereBME280.vcxproj.filters  app_manifest.json  azure_iot_utilities.c  azure_iot_utilities.h  main.c  mt3620_rdb.h
SphereBME280/libBME280/: bme280.c  bme280_defs.h  libBME280.c  libBME280.vcxproj  libBME280.vcxproj.filters
SphereBME280/libBME280/Inc/Public/: libBME280.h
SphereBME280/models.PnP/: testInterface.json
SphereOLED/: CMakeLists.txt  README.MD  SphereOLED.sln  app_manifest.json  main.c
SphereOLED/OLEDlib/: Fonts.h  OLEDlib.c  OLEDlib.vcxproj  OLEDlib.vcxproj.filters  SSD1308.h
SphereOLED/OLEDlib/Inc/Public/: OLEDlib.h
SphereOLED/SSD1308/: CMakeLists.txt  SSD1308.c  SSD1308defs.h
SphereOLED/SSD1308/Inc/: SSD1308.h
SphereOLED/SphereOLED/: SphereOLED.vcxproj  app_manifest.json  main.c
