#  Copyright (c) Microsoft Corporation. All rights reserved.
#  Licensed under the MIT License.

CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
PROJECT(MultiCoreRT C)

# Create executables
ADD_SUBDIRECTORY("Shared.RT")
ADD_SUBDIRECTORY("RedSphereRT")
#ADD_SUBDIRECTORY("BlueSphereRT")
#ADD_SUBDIRECTORY("GreenSphereRT")
